--- a/UnderstandingControllersViews/UnderstandingControllersViews.csproj
+++ b/UnderstandingControllersViews/UnderstandingControllersViews.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Remove="wwwroot\Safe &amp; Natural.png" />
+  </ItemGroup>
+
 </Project>
