How to call action method from view in ASP.NET Core

--- a/UnderstandingControllersViews/UnderstandingControllersViews.csproj
+++ b/UnderstandingControllersViews/UnderstandingControllersViews.csproj
@@ -10,4 +10,8 @@
     <Content Remove="wwwroot\Safe &amp; Natural.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\ControllerName\" />
+  </ItemGroup>
+
 </Project>
