--- a/UnderstandingControllersViews/UnderstandingControllersViews.csproj
+++ b/UnderstandingControllersViews/UnderstandingControllersViews.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Views\ControllerName\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+  </ItemGroup>
+
 </Project>
